chore: Update PDF viewer metadata in pdfviewer.html

--- a/pdfviewer.html
+++ b/pdfviewer.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+  <meta name="description" content="PDF Viewer">
+  <meta name="keywords" content="PDF, viewer">
+  <meta name="author" content="Om Rajguru">
+  <meta name="description" content=" A Grand Libray of Om, the Vision himself. Explored after his demise">
+  <meta name="keywords" content="PDF, viewer, web application, PDF viewer">
+  <meta name="author" content="Om Rajguru">
   <title>PDF Viewer</title>
   <style>
     body {
